--- a/Form1.resx
+++ b/Form1.resx
@@ -95,6 +95,62 @@
         piyNfrb3VaKnp+dfYTD4Cw8PmZid8XVEAAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="button6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABixJREFUWEftlvs31Gkcx/sHshXq7G/VtmU7u2e3U6fdlGQLkSj3W6Y2JGylVgg7
+        lVySdVvKLbeMy2AkDLnMGHeDqXELqagwpNS0v0nv/T7f/coYdNSe+qn3Oc9P3/N9Xp/P87w/n8+z5Is+
+        Rj1DcrVnoVdth0Ni2E+DItlDARE23d1PVZnPn0YeGa06puHCaqe4utHeJ+N4bWSF1/ssITewgHyvOe72
+        PcHh6CqZcWCJ8HisQJv57f/rzA3JRoNgQefyo1wsPZyFg2EC3BscmwV/pW8GSc8gKDiWHUqFmkMadvsV
+        dLjHCzWYbT5OrLh6t9XuBVNLj2TTcBUSQGgVuh7JZsFf6R5EW/cjmJAA7FOplYJldslY65Q+ZXul+ASz
+        3YfJNUUcoupIZa0AV2Fl4sDlCnQ+GJ4Ff7nnAFq6HsI4oPgdfLnddWolQf3QddiGFIUy2y5O/UPy7cZX
+        BLMyJ3AVFocKoBzt/UOz4C93m6C5ox/7A4pmwZfbkpUI/XPcKX6NZHG+GE7M+k6WxHnd/3gcF3PvQPVo
+        zju4CisDB0Ju04ZThE/oGKNR2of9FwtnwdXsk3AsshgVNS1o9wuWS/0ub2AwC2ssMqHuHxNbTHj44YG0
+        F/kN/dA4xaPhXzlkwIQKgBhOET6xaz8a7vTAiA7gP/g65zTE8uogKqrEgNlhjG3SRqebVw2DmV9eGW07
+        kwW9k095pZBbsCA3Z2Eg5xbqOwdhEFBKBXADJkGltOEU4RPa+1AnuQejCwU0fI8vFzeFrWiJScGI1j7I
+        tu5B2/kwXErmTx4J4e1gcHNlESESkDu3jqxGZ50Uz11O024f8bkE6d0++KY3wDSklDacIvyFliFqWrtg
+        TAXgEsWHUNCEnhPn8GyzDh4bWqEinQebgFyoWcfC8BynksHNlVNC3Sipc1Jqbol1kHQO4HFUIoa9AzBw
+        OQYS6koqW/powynCX2w3gEjcgUJhG4SiFnR5XcT9oychpf67VVoLVnA+DHw42OuVAcsLWSMMbrZIeyUd
+        jjQZUuek1IjbieHInZNjJ5kTODGcIvy5pj6ETVJUNd5FRb0E5bWtKBOJwRc2oVjQiKLKehSW16KgTIQ8
+        vvAtt6xsBYOdkeyvWHvl9qpcasrHPg0f/0UX49Q9P9vyK33sxHBjP+7E6A87MPq9JmQbt0Gm8TNG1m/F
+        8LdbILVzt2GwMxoOimZ/DvjwN5vRbOfqz2BnJAuJ9v8c8KE1m9Bi6+LHYGc0FBhp+zngQ6t/gtjeyZrB
+        zojM84UMR5oMqXNSasTtxHDK8PkMl19ajbwSAbhUM8ouLEfmzdvIyOe/5XLnMSHRkSh6ntNT7VhMFWqb
+        O3E/MBIDJ3zQ92coauokyK0Q025XzpzAU29Wo6ikChJXL3RaOqLZ3RuZeXzYsjnQPZMM3dNJMPVJGWZw
+        c2UaxK8i89wsmI+GEhFG7J3pYx9w80ZNtZhuMkbsPLrUlI+dZG7gzYHl+Szw8stwx8GNPvY+TQPkUx3R
+        zDcVK83DoeeRUMHg5upUQqVWFE882Z2UiReUD8Z1TdEel0611Tbs8MzBCpsEGPrn0nWufOfk2PXP3oCa
+        5d/Y9vt1JOaUofJCGAYpLzxZtwXVJ33hFZ41yfJP2c7g5tdDv5BaYrghB1c03a7F1YIG6mGRSsNX2MTD
+        0I9LNxllw5E71z+bDjWLaHqtsY8B+xoP+VQy3buMafM1WjmKGMzCehQWr9EbFCWvae7AH/EVUKdG6jSc
+        LAPfbNpwym4nhtPzpJ5jFFzdPIpakVhlEQH782lIyy6EyNFDXuN4ej2Deb+qxPc09X3zpshjQhG+wjoO
+        hlQAxHDKpUbcTgKYhqubR0DdLJxe2u5xb5I4t7Yx2y9OrLDioFV09jNwVetr1FDJpA2nXOek1PTOpMyB
+        f00Zz+Rs4oc9yaZlEcA7vtYx+c00XNXqKj3ViOGUmwypc1JqivB1dlFvjD0TXJjtPk6/RZRu0PHktK+0
+        IQHE0iOVGE65w5EmQ+qczpq6ey3Xa1Ir74TF3flidCiQq63nnSE0Z2fJiOGU2yuHekUd9E4e2X0yQWDl
+        k6zF/PZpROa51M7VRmzvzBZbO7NbrB1tFmyvX/ReLVnyL4NgBXNS0wTPAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="button5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABFJJREFUWEftlstvG1UUh/M3QFs2CBSncUMap3bsJHbi+Bk7fsV2Ho6T0AUIIUCt
+        QEBpYZEmDQIJ0YqqJRJ72IHEAqmseEioEgtoC0KCBUgoJR4/Z+54TBpnweHcmetx7bGtsQu7/qQrLxLf
+        757zzbnjvofpJeXY2hFpfnW0El2JVMLpsBROmUR/8lH25/8nZP70cSmxfkmKr91BOEixNEjRFShHcIVT
+        UA4tgzi3eFsMLGwRb3KAfe3Bg7DHKvH1HQQfVuJr0AhHcHiZwZdADC4CHgCE2cSh4E9clwILx9g2vWU/
+        uebAqjkFjCuG8GhaqVqFI/g+OJlNAvEngPjiwHvnC7w37mLbdRcpubqC8IPGqhlcbXkNvIjgRrjgnQfB
+        EwPeFTsouaMptq2+iIn0lBbe7Lu5aly+BIIR7kG4m8KjuCJQcoaqvCOirxOy88R6Vq/vetUt4DMR4J1h
+        KE2HoDQV5MrO0FGGaZ9KfHWnF99Ky9vAHXNQtAehMBG4xjCtQ0etHEsfanw/exbEt7ZBPPMGiHi4dr41
+        8CkKDyI8AMXJWSiM+6pZm9/AcNpg1dsNvl95E8jPvwKR9kH85iaIlz8EcuESkOhqW9/1ls/V4ROzUBz3
+        Q8Hmg/yYZ5PhtClHV36q+RbPbwERykCKAogXtrr0jXBseXFSgRcYvDDmgZzFfYvhGkOvV9V38mkQdzNA
+        KvdAfOdKa9+hVEffCpyBrV4Znre4IWd2/bM7bH+EYeupRFJmdcTevizDyR+7QOQZb+H76kfAP3NGWcEl
+        je9ayykc2w55sxvyp1yQG52B7IhzlGHrEcNLYXXEPv5UOcCXXyMY4c0tf+5lEL69CYRIIHx+o61vGW6h
+        cBfCZxDuhNzINOSG7SGGrYcEUyF1xD5hB7jxlRaOnzxOg/Dd90DKf4Pw2RdtfdOWq3CTAs+enILcSccc
+        w9bDBxdOqfO9/b5ygN//BIG2vcXDxl/ZAR7Hs4QKir5kS98UTlt+Pzz7lB2yJ+wmhq2Hvs/V+cY7gNzl
+        5EMIG+9qHzbqG/9Xj++cCVs+guBhhwzPDE22fghpiC95W235axs4hhKQfAn4s+cRjHd6h/lu51uumsG5
+        oUngBsd/YDhtBG9iq8H3i68D+eU3dL0PAj6Q/OZ7wL90DoruuG7fMnwI4ScmgDOOQ+a4dYPhtKG/ZHh3
+        rKpp+ekXgD93EUrPvwpFD4V34ZtWXYMP2KqccaKf4VpHcMWua3zrnO9m33LLKXyQVm7DA1g/YJj2kRyB
+        Y/x0mPtPfBtrcCvsDVgye0brEYbpHAQ7io7gQbfzrfE9iFUjPGOw3Lv75Jidba8vJUcgheCDnn0rLVfg
+        /eZltm13wQPYC1Yf16Nv2DNYMl1X3pyM2Xk0b/Zcw7dYVa/vjGGs+le/5apu53qSNTkN+BbbzI5M32r0
+        TeGq7x8RfpF7YrTzqD1o6FVK7/OM0RamK2uwmnYfb3O9PkzH9PX9Cz7FvJ1tUEXlAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="button4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACQAAAAkCAYAAADhAJiYAAAABGdBTUEAALGPC/xhBQAABWFJREFUWEft
